fix Java9 API usage in Java8 module